--- a/Models/-SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/-SVC/2024.09.13_LHQ-SVC.md
@@ -34,3 +34,49 @@ In this paper, we propose LHQ-SVC, a lightweight, CPU-compatible model based on 
 We incorporate features to improve inference quality, and optimize for CPU execution by using performance tuning tools and parallel computing frameworks.
 Our experiments demonstrate that LHQ-SVC maintains competitive performance, with significant improvements in processing speed and efficiency across different devices.
 The results suggest that LHQ-SVC can meet real-time performance requirements, even in resource-constrained environments.
+
+## 1·Introduction
+
+Singing Voice Conversion (SVC) has emerged as a promising application in the music domain, offering new possibilities for music production, cover songs, and personalized voice customization.
+
+SVC involves not only the conversion of speech characteristics but also musical elements such as melody and rhythm, making it more challenging than traditional VC tasks.
+
+Traditional SVC methods have largely relied on generative models.
+
+Nose et al. \cite{nose2015} proposed an HMM-based singing synthesis technique that allows users to intuitively and continuously control the singing style and intensity of synthesized singing voices.
+
+Kobayashi et al. \cite{kobayashi2014} introduced a statistical conversion process based on GMM to estimate spectral features directly, addressing the degradation in voice quality during conversion.
+
+Sisman et al. \cite{sisman2019} were the first to attempt using GANs for SVC and proposed a framework named SINGAN, which achieved high-quality singing voice conversion without relying on automatic speech recognition systems.
+
+Despite their advancements, these models face several limitations, including high data requirements, loss of audio quality, and the complexity of model training.
+
+In comparison to traditional statistical methods, deep learning has demonstrated superior performance by learning complex nonlinear mappings from large datasets, significantly improving the quality of converted voices and speaker similarity \cite{sisman2020}.
+
+Sun et al. \cite{sun2015} proposed a sequence conversion method based on DBLSTM-RNNs, utilizing LSTM to improve the naturalness and continuity of speech output in VC tasks through parallel training data.
+
+Xie et al. \cite{xie2016} introduced a DNN-based non-parallel training approach to VC, achieving effective conversion without parallel data.
+
+Recently, diffusion models have emerged as a powerful generative technique in image and audio synthesis.
+
+These models learn data distribution by gradually introducing and removing noise, capturing subtle features in audio signals, making them a promising alternative for SVC tasks.
+
+Chen et al. \cite{chen2024} introduced a method named LCM-SVC, which accelerates inference in latent diffusion models (LDM) for SVC through Latent Consistency Distillation (LCD), while retaining high sound quality and timbre similarity.
+
+Compared to traditional generative models, diffusion models better preserve the original sound details and musical characteristics.
+
+However, most existing diffusion-based SVC models employ a black-box structure, lacking intuitive interpretability and control over the generation process.
+
+This presents new challenges in optimizing and improving these models.
+
+To address these challenges, this paper proposes a novel approach called The innovation of this study lies in the development of LHQ-SVC, a lightweight and CPU-optimized Singing Voice Conversion model.
+
+Unlike previous models that rely on GPU-heavy computations, LHQ-SVC is designed to run efficiently on CPUs while maintaining high-quality audio conversion.
+
+Key innovations include:
+
+-  Model Size Reduction: LHQ-SVC significantly reduces the model size without compromising performance, making it suitable for deployment on devices with limited computational resources.
+
+-  CPU Optimization: By converting GPU-centric code to CPU-compatible operations and leveraging optimization libraries such as Intel MKL and OpenMP, LHQ-SVC achieves efficient parallel processing on multi-core CPUs.
+
+-  Improved Sampling Mechanism: We optimize the diffusion process by reducing the number of steps required in the conversion, enabling faster inference while maintaining high-quality results.
