--- a/Models/-SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/-SVC/2024.09.13_LHQ-SVC.md
@@ -238,3 +238,101 @@ $$
 This sampler provides superior performance to the standard ODE-based methods, particularly when $\tilde{x}_\psi(\tilde{y}_\tau)$ satisfies smoothness conditions.
 
 As the number of integration steps $N \rightarrow \infty$, the numerical error vanishes, enabling a trade-off between sample quality and computational efficiency.
+
+## 4·Experiments
+
+### Dataset Preparation
+
+**Singing and Speech Datasets**
+
+The datasets used in this study include the SVC-2023 Dataset \cite{huang2023singingvoiceconversionchallenge} and the DAMP (Data for Analysis of Musical Performances) Dataset \cite{8461660}.
+
+The SVC-2023 Dataset, widely used for benchmarking singing voice conversion models, provides parallel and non-parallel singing data across multiple languages, while the DAMP dataset offers a vast collection of over 30,000 singing performances collected from amateur singers using the Smule social singing app.
+
+**Vocal Separation**
+
+To extract clean vocal tracks from the songs, we employed the *Ultimate Vocal Remover* project.
+
+This involved two main steps: first, we used MDX-Net \cite{mdxnet2021} to remove the instrumental accompaniment from the audio files.
+
+Next, we applied the 6\_HP-Karaoke-UVR model \cite{uvr2021} to remove background harmonics from the vocal-separated files.
+
+The output was clean, isolated vocals that could be used for further processing and analysis.
+
+**Audio Slicing**
+
+After obtaining clean vocal tracks, we sliced the audio into segments of less than 30 seconds in duration, manually discarding segments without vocals to ensure only those containing vocal content were retained.
+
+This step was automated using the open-source *Audio Slicer* tool \cite{audioslicer2021}, which detects silent audio segments and slices the audio based on pitch, ensuring that the resulting audio clips primarily contained vocal content.
+
+**Data Augmentation**
+
+All audio clips were resampled to a uniform rate of 40kHz and normalized.
+
+Data augmentation was applied to the audio clips by segmenting the dataset into clips of varying sizes, with partial overlaps between adjacent clips to increase diversity in the training set.
+
+This augmentation helps improve model robustness to different voice and singing patterns.
+
+### Training Process
+
+**Feature Extraction**
+
+Before training, all audio files were resampled to 40kHz and normalized.
+
+We then extracted features using DIO for fundamental frequency (F0) and the ContentVec model to extract content-related features from the 12th layer, including F0 curves and voicing flags.
+
+These features were projected into a 256-dimensional space and concatenated to form the conditioning input for the decoding phase.
+
+We used a pre-trained vocoder \cite{vocoder2020} fine-tuned for singing voice synthesis and calculated Mel-spectrograms with a 512-point Fast Fourier Transform (FFT), a 512-point window size, and a 128-point hop size, producing 80 frequency bins.
+
+To evaluate the performance of the proposed singing voice conversion model, we compare it against several state-of-the-art models based on important metrics such as model size (MB), Short-Time Objective Intelligibility (STOI), Perceptual Evaluation of Speech Quality (PESQ), and Mean Opinion Scores (MOS) for both naturalness and similarity.
+
+The following methods are considered: RVC \cite{RVC2025}, SoVITS 4.0 \cite{svc_develop_team_so_vits_svc_2025}, SoVITS 5.0 \cite{ouor_sovits_svc_5_0}, Learn2Sing 2.0, \cite{xue2022learn2sing}, CoMoSVC \cite{lu2024comosvc}.
+
+**Model Training**
+
+All models were trained using a single NVIDIA GTX 4090 GPU.
+
+The batch size was set to 48, and the learning rates were 1e-4 and 5e-5, using the Adam optimizer.
+
+We first conducted reconstruction experiments to evaluate the capability of different decoding phases in the autoencoder setup.
+
+Following this, we conducted two sets of experiments on the target singer’s dataset to fine-tune the model.
+
+Additionally, we incorporated sampling steps for LHQ-SVC to assess the impact of different sampling methods on the quality of voice conversion.
+
+Conversion experiments were performed to evaluate the effect of these sampling steps on the overall conversion quality.
+
+### Experimental Models and Results
+
+The performance of LHQ-SVC, along with several baseline models, is summarized in Table~[tab1](#tab1).
+
+The results for LHQ-SVC and LHQ-SVC$_{mobile}$ stand out due to their lightweight nature and performance efficiency, especially for mobile device applications.
+
+LHQ-SVC, with a model size of 67.89 MB, achieves impressive results across multiple metrics, including the highest PESQ score of 3.02, and a Naturalness MOS of 4.02, which is the best among all models compared.
+
+These results indicate that LHQ-SVC excels in generating high-quality singing voice conversions while maintaining a relatively small model size.
+
+On the other hand, LHQ-SVC$_{mobile}$ is an even more compact version, with a model size of only 53 MB, optimized for mobile platforms.
+
+Although it shows slightly lower performance in terms of STOI and PESQ compared to LHQ-SVC, it still provides competitive results, especially in terms of Similarity MOS with a score of 3.91, making it a viable choice for lightweight applications requiring fast and efficient voice conversion on mobile devices.
+
+The balance between the performance and model size makes both LHQ-SVC and LHQ-SVC$_{mobile}$ particularly appealing for practical use, as they deliver strong results in Naturalness MOS and Similarity MOS while being resource-efficient.
+
+\vspace{-10pt}
+
+<a id="tab1">Comparison of Model Performance Metrics</a>
+
+In order to verify that our LHQ-SVC is efficient enough, we ran it on the Intel Core i7-11370H on the computer side as well as on the Qualcomm Snapdragon 8 Gen3 processor equipped with the Qualcomm Snapdragon 8 Gen3 processor, and the results of the run are shown in the figure~[re1](#re1).
+
+As can be seen from the figure~[re1](#re1), after optimization, the processing speed has been greatly improved, in the Intel Core i7 model device reasoning 3min30s audio, the time from 1min (processing timespeed of about 60/210, about 30\% of the original audio time) to about 11s (processing timespeed of about 11/210, about 5.2\% of the original audio time), in the GPU device reasoning even more to about 9s (processing timespeed of about 6/210, about 2.2\% of the original audio time), to achieve the real-time efficient demand.), and the inference on the GPU device even reaches about 9s (the processing speed is about 6/210, which is about 2.2\% of the original audio time), which achieves the real-time and high efficiency requirements.
+
+At the same time, we simplified the algorithm running on a cell phone to run slightly slower than the client on a Qualcomm Snapdragon 8 Gen3, meeting the need for lightweight efficiency.
+
+\vspace{-10pt}
+
+![](result3.png)
+
+<a id="re1">Comparison of GPU and CPU inference time on computer and cell phones</a>
+
+\vspace{-10pt}
