--- a/Models/-SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/-SVC/2024.09.13_LHQ-SVC.md
@@ -336,3 +336,163 @@ At the same time, we simplified the algorithm running on a cell phone to run sli
 <a id="re1">Comparison of GPU and CPU inference time on computer and cell phones</a>
 
 \vspace{-10pt}
+
+## 5·Conclusions
+
+In this paper, we introduced LHQ-SVC, a novel lightweight Singing Voice Conversion model designed to run efficiently on CPUs while maintaining high-quality voice conversion performance.
+
+Through careful optimization, including the conversion of GPU-specific code and the use of parallel computing frameworks, we reduced the computational demand and model size significantly.
+
+Experimental results demonstrated that LHQ-SVC achieves competitive performance in terms of intelligibility, perceptual speech quality, and naturalness, while also delivering substantial improvements in processing speed across different hardware platforms.
+
+\begin{thebibliography}{99}
+
+\bibitem{nose2015}
+Nose, T., Kanemoto, M., Koriyama, T., \& Kobayashi, T. (2015).
+
+HMM-based expressive singing voice synthesis with singing style control and robust pitch modeling. *Computer Speech \& Language*, 34(1), 308-322.
+
+\bibitem{sisman2020}
+Sisman, B., Yamagishi, J., King, S., \& Li, H. (2020).
+
+An overview of voice conversion and its challenges: From statistical modeling to deep learning. *IEEE/ACM Transactions on Audio, Speech, and Language Processing*, 29, 132-157.
+
+\bibitem{sun2015}
+Sun, L., Kang, S., Li, K., \& Meng, H. (2015).
+
+Voice conversion using deep Bidirectional Long Short-Term Memory based Recurrent Neural Networks.
+
+In *2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)* (pp. 4869-4873).
+
+IEEE.
+
+\bibitem{xie2016}
+Xie, F.
+
+L., Soong, F.
+
+K., \& Li, H. (2016, September).
+
+A KL divergence and DNN-based approach to voice conversion without parallel training sentences.
+
+In *Interspeech* (pp. 287-291).
+
+\bibitem{chen2024}
+Chen, S., Gu, Y., Cui, J., Zhang, J., Chen, R., \& Dai, L. (2024).
+
+LCM-SVC: Latent Diffusion Model Based Singing Voice Conversion with Inference Acceleration via Latent Consistency Distillation. *arXiv preprint arXiv:2408.12354*.
+
+\bibitem{yang2023}
+Yang, L., Zhang, Z., Song, Y., Hong, S., Xu, R., Zhao, Y., ... \& Yang, M.
+
+H. (2023).
+
+Diffusion models: A comprehensive survey of methods and applications. *ACM Computing Surveys*, 56(4), 1-39.
+
+\bibitem{xue2024singvisio}
+Xue, L., Wang, C., Wang, M., Zhang, X., Han, J., \& Wu, Z. (2024).
+
+SingVisio: Visual Analytics of Diffusion Model for Singing Voice Conversion. *arXiv preprint arXiv:2402.12660*.
+
+\bibitem{xue2022learn2sing}
+Xue, H., Wang, X., Zhang, Y., Xie, L., Zhu, P., \& Bi, M. (2022).
+
+Learn2sing 2.0: Diffusion and mutual information-based target speaker svs by learning from singing teacher. *arXiv preprint arXiv:2203.16408*.
+
+\bibitem{lei2023unisyn}
+Lei, Y., Yang, S., Wang, X., Xie, Q., Yao, J., Xie, L., \& Su, D. (2023, June).
+
+UniSyn: an end-to-end unified model for text-to-speech and singing voice synthesis.
+
+In *Proceedings of the AAAI Conference on Artificial Intelligence* (Vol. 37, No. 11, pp. 13025-13033).
+
+\bibitem{chen2024ldmsvc}
+Chen, S., Gu, Y., Zhang, J., Li, N., Chen, R., Chen, L., \& Dai, L. (2024).
+
+LDM-SVC: Latent Diffusion Model Based Zero-Shot Any-to-Any Singing Voice Conversion with Singer Guidance. *arXiv preprint arXiv:2406.05325*.
+
+\bibitem{kobayashi2014}
+Kobayashi, K., Toda, T., Neubig, G., Sakti, S., \& Nakamura, S. (2014).
+
+Statistical singing voice conversion with direct waveform modification based on the spectrum differential.
+
+In *Fifteenth Annual Conference of the International Speech Communication Association*.
+
+\bibitem{sisman2019}
+Sisman, B., Vijayan, K., Dong, M., \& Li, H. (2019, November).
+
+SINGAN: Singing voice conversion with generative adversarial networks.
+
+In *2019 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)* (pp. 112-118).
+
+IEEE.
+
+\bibitem{wang2024prompt}
+Wang, Y., Hu, R., Huang, R., Hong, Z., Li, R., Liu, W., ... \& Zhao, Z. (2024).
+
+Prompt-Singer: Controllable Singing-Voice-Synthesis with Natural Language Prompt. *arXiv preprint arXiv:2403.11780*.
+
+\bibitem{lu2024comosvc}
+Lu, Y., Ye, Z., Xue, W., Tan, X., Liu, Q., \& Guo, Y. (2024).
+
+CoMoSVC: Consistency Model-based Singing Voice Conversion. *arXiv preprint arXiv:2401.01792*.
+
+\bibitem{RVC2025}
+RVC-Project,
+\emph{Retrieval-based Voice Conversion WebUI},
+GitHub repository, 2023,
+\url{https://github.com/RVC-Project/Retrieval-based-Voice-Conversion-WebUI},
+
+\bibitem{svc_develop_team_so_vits_svc_2025}
+svc-develop-team,
+*SoftVC VITS Singing Voice Conversion*,
+GitHub repository, \url{https://github.com/svc-develop-team/so-vits-svc}, 2021.
+
+\bibitem{ouor_sovits_svc_5_0}
+ouor,
+\emph{Core Engine of Singing Voice Conversion \& Singing Voice Clone},
+GitHub repository, \url{https://github.com/ouor/so-vits-svc-5.0}, 2023.
+
+\bibitem{huang2023singingvoiceconversionchallenge}
+Huang, Wen - Chin and Violeta, Lester Phillip and Liu, Songxiang and Shi, Jiatong and Toda, Tomoki.
+{The Singing Voice Conversion Challenge 2023}.
+arXiv:2306.14422 [cs.SD], 2023.
+Available at: \url{https://arxiv.org/abs/2306.14422}
+
+\bibitem{8461660}
+
+Wang, Cheng - i and Tzanetakis, George.
+{Singing Style Investigation by Residual Siamese Convolutional Neural Networks}.
+
+In 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), pp. 116 - 120, 2018.
+
+DOI: 10.1109/ICASSP.2018.8461660.
+
+\bibitem{mdxnet2021}
+Défossez, A., Usunier, N., Bottou, L., \& Bach, F. (2021).
+
+Music Source Separation in the Waveform Domain. *Proceedings of the International Society for Music Information Retrieval Conference (ISMIR 2021)*.
+
+\bibitem{uvr2021}
+UVR Development Team. (2021).
+
+Ultimate Vocal Remover (UVR) Model - 6\_HP-Karaoke.
+
+Available at: \url{https://ultimatevocalremover.com}.
+
+\bibitem{audioslicer2021}
+Audio Slicer Development Team. (2021).
+
+Audio Slicer: Open-Source Tool for Audio Segmentation.
+
+Available at: \url{https://github.com/maxrmz/Audio-Slicer}.
+
+\bibitem{vocoder2020}
+Kumar, K., Gulati, A., Jain, A., Wang, Y., Zhang, J., \& Kolczynski, A. (2020).
+
+MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis. *Proceedings of NeurIPS 2020*.
+
+\end{thebibliography}
+
+\end{document}
+
